fixed overflow issue with highmaps

--- a/public/css/mainStyles.css
+++ b/public/css/mainStyles.css
@@ -7,6 +7,7 @@ body {
 
 high-chart-directive {
     width: 100%;
+    overflow: hidden;
 }
 
 #contentWrapper {
